--- a/angularLoginApp/src/app/sign-up/sign-up.component.html
+++ b/angularLoginApp/src/app/sign-up/sign-up.component.html
@@ -4,6 +4,40 @@
       <div class="sm-jumbotron center-align">
         <h2>Create An Account !</h2>
       </div>
+      <div class="row">
+          <form class="col s12">
+            <div class="row">
+              <div class="input-field col s6">
+                <input placeholder="First Name" id="first_name" type="text" class="validate">
+                <label for="first_name">First Name</label>
+              </div>
+              <div class="input-field col s6">
+                <input id="last_name" type="text" class="validate">
+                <label for="last_name">Last Name</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input disabled value="UserName" id="disabled" type="text" class="validate">
+                <label for="disabled">UserName</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="password" type="password" class="validate">
+                <label for="password">Password</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="email" type="email" class="validate">
+                <label for="email">Email</label>
+              </div>
+            </div>
+            <div class="row">
+            </div>
+          </form>
+        </div>
     </div>
   </div>
 </div>
